# mk.ai

./: .COMPLETE  .cursorrules  .gitignore  LICENSE  PERFORMANCE.md  RALPH_EXECUTION_REPORT.md  README.en.md  README.md  api_design.md  auto-shorts.api.md  bugfix.md  eslint.config.js  index.html  package-lock.json  package.json  performance_optimization_plan.md  performance_optimization_report.md  vite.config.ts
.github/workflows/: release.yml
.ralph/: PROGRESS.append.md  PROGRESS.md  TASKS.json
.ralph/checkpoints/: index.json
.ralph_logs/: STEP2_codex_changes.md  STEP4_codex_changes.md  STEP5_claude_architecture.md  trace.jsonl
J-space/: .gitignore  NOTICE  README.md  pyproject.toml
J-space/configs/models/: glm-5.2-fp8.yaml  qwen3-0.6b.yaml  qwen3-32b.yaml  qwen3-4b.yaml  qwen3-8b-local.yaml  qwen3-8b.yaml  qwen3.6-27b.yaml
J-space/jspace/: __init__.py  cli.py  corpus.py  download.py  fit_runner.py  interventions.py  loader.py  registry.py
J-space/jspace/serve/: __init__.py  app.py
J-space/jspace/serve/web/: index.html
J-space/scripts/: deploy_h202.sh  setup_env.sh
J-space/tests/: test_pipeline_tiny.py
docs/: Tauri插件配置指南.md  block-store-spec.md  dom-patch-spec.md  performance-gate-spec.md  scroll-sync-anchor-spec.md  scroll-sync-governance-checklist.md  主题新增指南.md  同步滚动实现说明.md  打开控制台-快速指南.md  技术方案.md  调试指南.md
performance_tests/: README.md  index.html  main.ts
scripts/: generate-ico.cjs  generate-icons.cjs  generate-icons.js  perf-gate.mjs  run-perf-tests-puppeteer.mjs  run-perf-tests.js
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: index.ts  useAutoSave.test.ts  useAutoSave.ts  useDragDrop.ts  useFileWatcher.ts  (+4 more)
(+84 files in other folders)
