[project]
name = "jspace"
version = "0.1.0"
description = "J-space: a model-agnostic Jacobian-lens observability framework for Linux/CUDA LLMs (GLM, Qwen, and beyond)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "transformers>=4.51",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "huggingface-hub>=0.25",
    # Vendored under vendor/jlens (Apache-2.0, Anthropic). Installed by
    # scripts/setup_env.sh with `pip install -e vendor/jlens`.
    "jlens",
]

[project.optional-dependencies]
# Extras only needed for fitting on the biggest MoE checkpoints.
big = [
    "datasets>=2.20",
]

[project.scripts]
jspace = "jspace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jspace"]

[tool.uv.sources]
jlens = { path = "vendor/jlens", editable = true }
