[package]
name = "md-ai"
version = "1.0.0"
description = "MD.AI - A Modern Markdown Editor"
authors = ["MD.AI Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.5"
tauri-plugin-dialog = "2.7"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enable devtools only in debug builds
devtools = ["tauri/devtools"]

[profile.dev]
features = ["devtools"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
